tests/integrations/basic-fail/tests/actual_tests/rustc_ice.stderr
error: internal compiler error: no errors reported for args
 --> $DIR/rustc_ice.rs:9:5
  |
9 |     add("42", 3);
  |     ^^^^^^^^^^^^

thread 'rustc' panicked at 'aborting due to `-Z treat-err-as-bug=1`', compiler/rustc_errors/src/lib.rs:1712:30
stack backtrace:

error: the compiler unexpectedly panicked. this is a bug.

note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md

note: rustc 1.72.0 (5680fa18f 2023-08-23)

note: compiler flags: -Z treat-err-as-bug

query stack during panic:
#0 [typeck] type-checking `main`
#1 [used_trait_imports] finding used_trait_imports `main`
#2 [analysis] running analysis passes on this crate
end of query stack
